--- a/_config.yml
+++ b/_config.yml
@@ -39,14 +39,14 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  patreon: DeanAttali
-  youtube: c/daattali
+  email: "sm4857@cumc.columbia.edu"
+  #facebook: deanattali
+  #github: daattali
+  #twitter: daattali
+  #patreon: DeanAttali
+  #youtube: c/daattali
 #  reddit: yourname
-#  linkedin: daattali
+   linkedin: "https://www.linkedin.com/in/shiyang-ma/"
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -59,7 +59,7 @@ social-network-links:
 #  telegram: yourname
 #  calendly: yourname
 #  mastodon: instance.url/@username
-#  ORCID: your ORCID ID
+   ORCID: "https://orcid.org/0000-0002-4423-5798"
 #  google-scholar: your google scholar
 
 # If you want to show a link to an RSS in the footer, add the site description here.
