--- a/_config.yml
+++ b/_config.yml
@@ -41,12 +41,12 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "sm4857@cumc.columbia.edu"
+  #email: "sm4857@cumc.columbia.edu"
   #facebook: deanattali
   github: shiyangm
   linkedin: shiyang-ma
   ORCID: 0000-0002-4423-5798
-  #google-scholar: your google scholar
+  google-scholar: citations?user=a23UFoYAAAAJ&hl=en&oi=ao
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
